readd to resolve alignment of the date in the ticket notes view

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -24,3 +24,13 @@ body { padding-top: 70px; }
 .nav-tabs {
     margin-bottom: 0;
 }
+
+.container {
+    padding-bottom: 20px;
+}
+
+.panel-heading span
+{
+    margin-top: -18px;
+    margin-right: -9px;
+}
